# poppyland-home

./: .gitignore  README.md  run.sh
lcd-control/: README.md  pyproject.toml  run.sh
lcd-control/lcd_control/: lcd_control.py
public/: schematic.fzz
rpiserver/: Dockerfile  README.md  app.py  pyproject.toml  run.sh
rpiserver/apps/: raincloud.py  sunset.py
rpiserver/routers/: raincloud.py
rpiserver/rpiserver/: server.py
rpiserver/static/: style.css
rpiserver/templates/: index.html  raincloud.html  raincloud_index.html  sunset.html
